<resources>
    <string name="app_name">xwalkEmbedded</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="change_proxy">Change proxy</string>
    <string name="load_baidu">Index HTML</string>
    <string name="load_video">Load video</string>
    <string name="load_enableProxy">Enable Proxy</string>
    <string name="load_disableProxy">Disable Proxy</string>
    <string name="load_enableExMediaPlayer">Enable ExMediaPlayer</string>
    <string name="load_disableExMediaPlayer">Disable ExMediaPlayer</string>
    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
    <string name="application_name">ExoPlayer Demo</string>

    <string name="enable_background_audio">Play in background</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="logging">Logging</string>

    <string name="logging_normal">Normal</string>

    <string name="logging_verbose">Verbose</string>

    <string name="retry">Retry</string>

    <string name="off">[off]</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for</string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for </string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder </string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="button_replay">重新播放</string>

    <string name="play_failed">播放失败</string>
</resources>
