<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_exitfullscreen" android:title="Exit Fullscreen"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_baidu" android:title="@string/load_baidu"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_video" android:title="@string/load_video"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_enableProxy" android:title="@string/load_enableProxy"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_disableProxy" android:title="@string/load_disableProxy"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
